src/objects/LTA_Bill__c.object
<CustomObject>
    <description>This object houses all Legislative Bill data from Telicon.</description>
    <fields>
        <fullName>Bill_Author__c</fullName>
        <label>Bill Author</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Caption__c</fullName>
        <description>Brief summary of the proposed bill.</description>
        <inlineHelpText>Read-only official caption, automatically updated providing a brief summary of the proposed bill.</inlineHelpText>
        <label>Bill Caption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_Number__c</fullName>
        <label>Bill Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Session__c</fullName>
        <label>Bill Session</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Summary__c</fullName>
        <description>State Legislative Affairs&apos; (Tier A) completed Bill Summary.</description>
        <inlineHelpText>State Legislative Affairs&apos; completed Bill Summary.</inlineHelpText>
        <label>Bill Summary</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Bill_Type__c</fullName>
        <description>Indicated Session Number for this Bill Version.</description>
        <inlineHelpText>Indicated Session Number for this Bill Version.</inlineHelpText>
        <label>Bill Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Version__c</fullName>
        <description>Up to 6 versions from the Telicon data feed record.</description>
        <label>Bill Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIL</fullName>
                    <label>1 - Filed</label>
                </value>
                <value>
                    <fullName>HCS</fullName>
                    <label>2 - House Committee Substitute</label>
                </value>
                <value>
                    <fullName>ENG</fullName>
                    <label>3 - Engrossed</label>
                </value>
                <value>
                    <fullName>SCS</fullName>
                    <label>4 - Senate Committee Substitute</label>
                </value>
                <value>
                    <fullName>CCR</fullName>
                    <label>5 - Conference Committee Report</label>
                </value>
                <value>
                    <fullName>ENR</fullName>
                    <label>6 - As Finally Passed (Enrolled)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CB1Name__c</fullName>
        <label>C1 Bill</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Similar or identical legislation that is introduced in the Senate and the House.</description>
        <label>CB1</label>
        <referenceTo>LTA_Bill__c</referenceTo>
        <relationshipLabel>TxDOT Tracked Bills (CB1)</relationshipLabel>
        <relationshipName>Companion_Biills_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB2Name__c</fullName>
        <label>C2 Bill</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Similar or identical legislation that is introduced in the Senate and the House.</description>
        <label>CB2</label>
        <referenceTo>LTA_Bill__c</referenceTo>
        <relationshipName>Companion_Bills_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CB3Name__c</fullName>
        <label>C3 Bill</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CB3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Similar or identical legislation that is introduced in the Senate and the House.</description>
        <label>CB3</label>
        <referenceTo>LTA_Bill__c</referenceTo>
        <relationshipName>Companion_Bills_3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corollary_Division_s__c</fullName>
        <description>Indicates which Division(s) has secondary responsibility for this bill.</description>
        <inlineHelpText>Indicates which Division(s) has secondary responsibility for this bill.</inlineHelpText>
        <label>Corollary Division(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>AVN</fullName>
                </value>
                <value>
                    <fullName>BRG</fullName>
                </value>
                <value>
                    <fullName>CIV</fullName>
                </value>
                <value>
                    <fullName>CMD</fullName>
                </value>
                <value>
                    <fullName>CMP</fullName>
                </value>
                <value>
                    <fullName>CSD</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>DES</fullName>
                </value>
                <value>
                    <fullName>ENV</fullName>
                </value>
                <value>
                    <fullName>FED</fullName>
                </value>
                <value>
                    <fullName>FIN</fullName>
                </value>
                <value>
                    <fullName>FOD</fullName>
                </value>
                <value>
                    <fullName>GCD</fullName>
                </value>
                <value>
                    <fullName>HRD</fullName>
                </value>
                <value>
                    <fullName>ITD</fullName>
                </value>
                <value>
                    <fullName>MNT</fullName>
                </value>
                <value>
                    <fullName>MRD</fullName>
                </value>
                <value>
                    <fullName>MTD</fullName>
                </value>
                <value>
                    <fullName>OCC</fullName>
                </value>
                <value>
                    <fullName>PEPS</fullName>
                </value>
                <value>
                    <fullName>PFD</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
                <value>
                    <fullName>PTN</fullName>
                </value>
                <value>
                    <fullName>ROW</fullName>
                </value>
                <value>
                    <fullName>RRD</fullName>
                </value>
                <value>
                    <fullName>RTI</fullName>
                </value>
                <value>
                    <fullName>SLA</fullName>
                </value>
                <value>
                    <fullName>SSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_LBB_Fiscal_Impact_Statement_Due__c</fullName>
        <description>This indicates when the Fiscal Impact Statement needs to be completed and uploaded to the bill.</description>
        <inlineHelpText>This indicates when the Fiscal Impact Statement needs to be completed and uploaded to the bill.</inlineHelpText>
        <label>Date LBB FIS Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Indicates when the Final Analysis is due for this Bill Version.</description>
        <inlineHelpText>Indicates when the Final Analysis is due for this Bill Version.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fiscal_Impact_Summary__c</fullName>
        <description>State Legislative Affairs&apos; (Tier A) Fiscal Impact &amp; Analysis Summary.</description>
        <inlineHelpText>State Legislative Affairs&apos; Fiscal Impact &amp; Analysis Summary.</inlineHelpText>
        <label>Fiscal Impact Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <description>Indicates the proposed bill&apos;s impact categorization.</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Significant</fullName>
                </value>
                <value>
                    <fullName>2 - Moderate</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
                <value>
                    <fullName>4 - No Direct Impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBB_Fiscal_Impact_Statement_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that the Fiscal Impact Summary is required for this bill and will initiate an email alert and task assignment.</description>
        <inlineHelpText>This field indicates that the Fiscal Impact Summary is required for this bill and will initiate an email alert and task assignment.</inlineHelpText>
        <label>LBB FIS Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBB_Fiscal_Impact_Statement_Submitted__c</fullName>
        <description>This field indicates when the Fiscal Impact Summary was processed and uploaded to this bill.</description>
        <inlineHelpText>This field indicates when the Fiscal Impact Summary was processed and uploaded to this bill.</inlineHelpText>
        <label>LBB FIS Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Action__c</fullName>
        <description>Indicates the last action on the Bill within Telicon.</description>
        <inlineHelpText>Indicates the last action on the Bill within Telicon.</inlineHelpText>
        <label>Last Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legislative_Liaison_SLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicates the Tier A User assignment for this bill.</description>
        <inlineHelpText>The assigned Legislative Liaison responsible for the final analysis of this Bill Version.</inlineHelpText>
        <label>SLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select the appropriate SLA user.</errorMessage>
            <filterItems>
                <field>User.Division__c</field>
                <operation>equals</operation>
                <value>SLA</value>
            </filterItems>
            <filterItems>
                <field>$Source.Subject__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Telicon (TLO) Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Operational_Impact_Analysis__c</fullName>
        <description>State Legislative Affairs (Tier A) Operational Impact &amp; Analysis Summary.</description>
        <inlineHelpText>State Legislative Affairs&apos; completed Operational Impact &amp; Analysis Summary.</inlineHelpText>
        <label>Operational Impact &amp; Analysis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>LTA_Bill__c</referenceTo>
        <relationshipName>Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Division__c</fullName>
        <description>Indicates which Division has the primary responsibility for this bill.</description>
        <inlineHelpText>Indicates which Division has the primary responsibility for this bill.</inlineHelpText>
        <label>Primary Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Division</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_Analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup will allow for auto-creation of the Tier A SLA Bill Analysis.</description>
        <label>SLA Analysis</label>
        <referenceTo>LTA_Bill_Analysis__c</referenceTo>
        <relationshipName>Bills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This indicates the SLA&apos;s Bill Analysis review status.</description>
        <formula>TEXT( SLA_Analysis__r.Review_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This indicates the SLA&apos;s Bill Analysis review status.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Indicates the proposed bill&apos;s subject categorization.</description>
        <label>TxDOT Subject Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appropriations</fullName>
                </value>
                <value>
                    <fullName>Bike/Ped</fullName>
                </value>
                <value>
                    <fullName>Construction/Letting</fullName>
                </value>
                <value>
                    <fullName>Contracting (Goods &amp; Non.Prof. Services)</fullName>
                </value>
                <value>
                    <fullName>DB/CDA</fullName>
                </value>
                <value>
                    <fullName>Eminent Domain</fullName>
                </value>
                <value>
                    <fullName>Energy Sector</fullName>
                </value>
                <value>
                    <fullName>Federal Compliance (Funding - CDL)</fullName>
                </value>
                <value>
                    <fullName>Federal Compliance (Funding - Traffic Safety)</fullName>
                </value>
                <value>
                    <fullName>Federal Compliance (OS/OW)</fullName>
                </value>
                <value>
                    <fullName>Federal Compliance (Other)</fullName>
                </value>
                <value>
                    <fullName>High-Speed Rail</fullName>
                </value>
                <value>
                    <fullName>Highway Memorial Designation</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Local Transp. (Non-TxDOT)</fullName>
                </value>
                <value>
                    <fullName>Maritime/Ports</fullName>
                </value>
                <value>
                    <fullName>Minimum Wage</fullName>
                </value>
                <value>
                    <fullName>OS/OW</fullName>
                </value>
                <value>
                    <fullName>Other (Gen. Gov’t)</fullName>
                </value>
                <value>
                    <fullName>Other (TxDOT)</fullName>
                </value>
                <value>
                    <fullName>Professional Services (Eng.)</fullName>
                </value>
                <value>
                    <fullName>Prop 1/7</fullName>
                </value>
                <value>
                    <fullName>Report/Study</fullName>
                </value>
                <value>
                    <fullName>ROW (Non-ED)</fullName>
                </value>
                <value>
                    <fullName>Rules, PIA, Open Meetings</fullName>
                </value>
                <value>
                    <fullName>SHF</fullName>
                </value>
                <value>
                    <fullName>Special Districts (MUDS)</fullName>
                </value>
                <value>
                    <fullName>Sunset Bills</fullName>
                </value>
                <value>
                    <fullName>TERP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telicon_Bill_ID__c</fullName>
        <description>External ID for the Telicon data feed</description>
        <externalId>true</externalId>
        <label>Telicon Bill ID</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>TxDOT Tracked Bill</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Link__c</columns>
        <columns>Bill_Author__c</columns>
        <columns>Bill_Version__c</columns>
        <columns>Bill_Caption__c</columns>
        <columns>Status__c</columns>
        <columns>Legislative_Liaison_SLA__c</columns>
        <columns>Primary_Division__c</columns>
        <columns>Corollary_Division_s__c</columns>
        <columns>Impact__c</columns>
        <columns>LBB_Fiscal_Impact_Statement_Requested__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unassigned_Bills</fullName>
        <columns>NAME</columns>
        <columns>Link__c</columns>
        <columns>Bill_Author__c</columns>
        <columns>Bill_Version__c</columns>
        <columns>Bill_Caption__c</columns>
        <columns>Status__c</columns>
        <columns>Legislative_Liaison_SLA__c</columns>
        <columns>Primary_Division__c</columns>
        <columns>Corollary_Division_s__c</columns>
        <columns>Impact__c</columns>
        <columns>LBB_Fiscal_Impact_Statement_Requested__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legislative_Liaison_SLA__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unassigned Bills</label>
    </listViews>
    <nameField>
        <label>Bill</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TxDOT Tracked Bills</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>